@@ -383,7 +383,7 @@ Win32
    - Modify lib/setup.h
    - Modify lib/Makefile.vc6
    - Add defines to Project/Settings/C/C++/General/Preprocessor Definitions
-     in the curllib.dsw/curllib.dsp Visual C++ 6 IDE project.
+     in the libcurl.dsw/libcurl.dsp Visual C++ 6 IDE project.
 
 
    Important static libcurl usage note
