@@ -3,7 +3,7 @@ Microsoft Developer Studio Workspace File, Format Version 6.00
 
 ###############################################################################
 
-Project: "curllib"=".\curllib.dsp" - Package Owner=<4>
+Project: "libcurl"=".\libcurl.dsp" - Package Owner=<4>
 
 Package=<5>
 {{{
